@startuml
'!theme plain
hide circle
skinparam linetype ortho

entity "locations" as Locations {
  * id_location : TEXT <<PK>>
  --
  country : TEXT
  city : TEXT
  longitude : FLOAT 
  latitude : FLOAT 
  state : TEXT
}

entity "hotels" as Hotels {
  * id_hotel : TEXT <<PK>>
  --
  location_id : TEXT <<FK>>
  name : TEXT
  description : TEXT
  stars : INTEGER
  phone : TEXT
  email : TEXT
  cover_image_url : TEXT[]
  is_active : BOOLEAN
}

entity "room_types" as RoomTypes {
  * id_room_type : TEXT <<PK>>
  --
  name : TEXT
  description : TEXT
  base_price : FLOAT
  capacity : INTEGER
}

entity "rooms" as Rooms {
  * id_room : TEXT <<PK>>
  --
  hotel_id : TEXT <<FK>>
  room_type_id : TEXT <<FK>>
  room_number : TEXT
  floor : INTEGER
  is_available : BOOLEAN
  image_url : TEXT
}

entity "users" as Users {
  * id_user : TEXT <<PK>>
  --
  email : TEXT
  password_hash : TEXT
  name : TEXT
  lastname : TEXT
  phone : TEXT
  birthdate : TEXT
  age : INTEGER
  document_type : TEXT
  document_number : TEXT
  avatar_url : TEXT
  nationality : TEXT
  reset_password_token : INTEGER
  status : BOOLEAN
}

entity "guests" as Guests {
  * id_guest : TEXT <<PK>>
  --
  reservation_id : TEXT <<FK>>
  name : TEXT
  lastname : TEXT
  document_type : TEXT
  document_number : TEXT
  nationality : TEXT
}

entity "reservations" as Reservations {
  * id_reservation : TEXT <<PK>>
  --
  user_id : TEXT <<FK>>
  room_id : TEXT <<FK>>
  check_in : DATETIME
  check_out : DATETIME
  total_price : FLOAT
  status : TEXT
  adults : INTEGER
  children : INTEGER
  special_requests : TEXT
  created_at : DATETIME
}

entity "payments" as Payments {
  * id_payment : TEXT <<PK>>
  --
  reservation_id : TEXT <<FK>>
  amount : FLOAT
  method : TEXT
  status : TEXT
  paid_at : DATETIME
  transaction_id : TEXT
}

entity "amenities" as Amenities {
  * id_amenity : TEXT <<PK>>
  --
  name : TEXT
  icon : TEXT
  category : TEXT
}

entity "hotel_amenities" as HotelAmenities {
  * hotel_id : TEXT <<PK, FK>>
  * amenity_id : TEXT <<PK, FK>>
}

entity "room_amenities" as RoomAmenities {
  * room_id : TEXT <<PK, FK>>
  * amenity_id : TEXT <<PK, FK>>
}

entity "services" as Services {
  * id_service : TEXT <<PK>>
  --
  hotel_id : TEXT <<FK>>
  name : TEXT
  price : FLOAT
  description : TEXT
}

entity "reservation_services" as ReservationServices {
  * id_reservation_service : TEXT <<PK>>
  --
  reservation_id : TEXT <<FK>>
  service_id : TEXT <<FK>>
  quantity : INTEGER
  subtotal : FLOAT
}

entity "loyalty_transactions" as LoyaltyTransactions {
  * id_loyalty_transaction : TEXT <<PK>>
  --
  user_id : TEXT <<FK>>
  reservation_id : TEXT <<FK>>
  reward_redemption_id : TEXT <<FK>>
  type : TEXT
  stars : INTEGER
  description : TEXT
  created_at : DATETIME
}

entity "rewards" as Rewards {
  * id_reward : TEXT <<PK>>
  --
  name : TEXT
  description : TEXT
  stars_cost : INTEGER
  type : TEXT
  is_active : BOOLEAN
}

entity "reward_redemptions" as RewardRedemptions {
  * id_reward_redemption : TEXT <<PK>>
  --
  user_id : TEXT <<FK>>
  reward_id : TEXT <<FK>>
  reservation_id : TEXT <<FK>>
  stars_spent : INTEGER
  status : TEXT
  created_at : DATETIME
}

entity "reviews" as Reviews {
  * id_review : TEXT <<PK>>
  --
  reservation_id : TEXT <<FK>>
  user_id : TEXT <<FK>>
  hotel_id : TEXT <<FK>>
  rating : INTEGER
  comment : TEXT
  created_at : DATETIME
}

entity "notifications" as Notifications {
  * id_notification : TEXT <<PK>>
  --
  user_id : TEXT <<FK>>
  reservation_id : TEXT <<FK>>
  title : TEXT
  body : TEXT
  type : TEXT
  is_read : BOOLEAN
  created_at : DATETIME
}

' --- RELACIONES ---
Locations ||--o{ Hotels
Hotels ||--o{ Rooms
RoomTypes ||--o{ Rooms
Users ||--o{ Reservations
Rooms ||--o{ Reservations
Reservations ||--o{ Guests
Reservations ||--o{ Payments
Reservations ||--o{ ReservationServices
Services ||--o{ ReservationServices
Hotels ||--o{ Services
Hotels ||--o{ HotelAmenities
Amenities ||--o{ HotelAmenities
Rooms ||--o{ RoomAmenities
Amenities ||--o{ RoomAmenities
Users ||--o{ LoyaltyTransactions
Reservations |o--o{ LoyaltyTransactions
RewardRedemptions |o--o{ LoyaltyTransactions
Users ||--o{ RewardRedemptions
Rewards ||--o{ RewardRedemptions
Reservations |o--o{ RewardRedemptions
Reservations ||--o{ Reviews
Users ||--o{ Reviews
Hotels ||--o{ Reviews
Users ||--o{ Notifications
Reservations |o--o{ Notifications

@enduml